<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <mttdat.viewplus.ImageAutoScale
        android:id="@+id/iv_pattern"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:heightPerWidth="0.622107969151671"
        android:src="@drawable/bg_pattern"
        android:scaleX="1.1"
        android:scaleY="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53"/>

    <mttdat.viewplus.ImageAutoScale
        android:id="@+id/height_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:heightPerWidth="0.792"
        app:layout_constraintBottom_toBottomOf="@id/gl"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/height_vp"
        app:layout_constraintBottom_toBottomOf="@id/height_vp"/>
    
    
    <mttdat.viewplus.TextViewPlus
        android:id="@+id/tv_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="connect with friends!"
        app:layout_constraintBottom_toTopOf="@id/tv_content"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:customPaddingBottom="48"
        app:customFont="@string/font_quick_sand_bold"
        app:customSize="24"
        android:transitionName="lb_mocchi"/>

    <mttdat.viewplus.TextViewPlus
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/layout_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lb_content_intro_1"
        app:customPaddingBottom="48"
        app:customPaddingLeft="48"
        app:customPaddingRight="48"
        app:customFont="@string/font_quick_sand"
        app:customSize="16"
        app:layout_constraintWidth_percent="0.7"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/div_btm">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="68"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="109">

            <mttdat.viewplus.ImageAutoScale
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/button_small"
                app:layout_constraintDimensionRatio="W,49:105"/>

            <mttdat.viewplus.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:background="@drawable/button_small"
                android:text="sign up"
                app:customFont="@string/font_quick_sand_bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="30"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="104">

            <mttdat.viewplus.ImageAutoScale
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/button_small"
                app:layout_constraintDimensionRatio="W,49:105"
                android:transitionName="btn_login"/>

            <mttdat.viewplus.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:background="@drawable/button_small"
                android:text="sign in"
                app:customFont="@string/font_quick_sand_bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="68"/>

    </LinearLayout>

    <mttdat.viewplus.TextViewPlus
        android:id="@+id/div_btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:customSize="1"
        app:customPaddingTop="64"/>

</androidx.constraintlayout.widget.ConstraintLayout>